Persistent Query Settings lookup does not scale with the number query settings entries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 8.1.0-rc0, 8.0.0-rc5
    • Affects Version/s: None
    • Component/s: None
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Persistent Query Settings lookup does not scale with the number query settings entries.

      Based on benchmark run https://evergreen.mongodb.com/task/mongodb_mongo_master_enterprise_rhel_80_benchmarks_benchmarks_query_5ed124303c329bc4161bcb5912dd673071caabd4_24_04_21_01_47_00 and the log https://parsley.mongodb.com/resmoke/b10737f178953964674af86414a10e46/test/17c97061d7465d5e4274545353f6a5fb?bookmarks=0,5533&shareLine=403 
      it takes 21542661ns to perform a lookup for a query of ~100 bytes in size when there are 75500 query settings and there is a lookup miss. This is a regression - previously the lookup took ~1100 ns.

            Assignee:
            Mindaugas Malinauskas (Inactive)
            Reporter:
            Mindaugas Malinauskas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: