SERVER-89856 Fixed Persistent Query Settings lookup performance issues (#21650)

GitOrigin-RevId: 5c66a52bea419fd5dfbf8648e87eb9a9696dd15e