src/mongo/db/query/query_settings/query_settings_utils.cpp
@@ -380,8 +380,7 @@ QuerySettings lookupQuerySettingsForFind(const boost::intrusive_ptr<ExpressionCo
     // Return the found query settings or an empty one.
     auto& manager = QuerySettingsManager::get(opCtx);
     auto settings = manager.getQuerySettingsForQueryShapeHash(opCtx, *hash, nss.dbName().tenantId())
-                        .get_value_or({})
-                        .first;
+                        .get_value_or({});
 
     // Fail the current command, if 'reject: true' flag is present.
     failIfRejectedBySettings(expCtx, settings);
@@ -442,8 +441,7 @@ QuerySettings lookupQuerySettingsForAgg(
     // Return the found query settings or an empty one.
     auto& manager = QuerySettingsManager::get(opCtx);
     auto settings = manager.getQuerySettingsForQueryShapeHash(opCtx, *hash, nss.dbName().tenantId())
-                        .get_value_or({})
-                        .first;
+                        .get_value_or({});
 
     // Fail the current command, if 'reject: true' flag is present.
     failIfRejectedBySettings(expCtx, pipeline, settings);
@@ -498,8 +496,7 @@ QuerySettings lookupQuerySettingsForDistinct(const boost::intrusive_ptr<Expressi
     // Return the found query settings or an empty one.
     auto& manager = QuerySettingsManager::get(opCtx);
     auto settings = manager.getQuerySettingsForQueryShapeHash(opCtx, *hash, nss.dbName().tenantId())
-                        .get_value_or({})
-                        .first;
+                        .get_value_or({});
 
     // Fail the current command, if 'reject: true' flag is present.
     failIfRejectedBySettings(expCtx, settings);
